EDA expansion, explore from library taken away, new changes to be added

--- a/Preprocessing/Preprocessing.ipynb
+++ b/Preprocessing/Preprocessing.ipynb
@@ -3801,7 +3801,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No categorical encoding will be done here in case I train a model that has native category support, like CatBoost."
+    "No categorical encoding will be done at this stage for EDA purposes."
    ]
   },
   {
