README update, insight touch-ups

--- a/Preprocessing/Preprocessing.ipynb
+++ b/Preprocessing/Preprocessing.ipynb
@@ -3824,10 +3824,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Dataset contains personal information on customers, not only the information that reflects their relationship with the company, which will allow us to build a portrait of a customer\n",
-    "* The information on types of services clients use is very deep, which will allow us to better understand what it is that our customers are unsatisfied with\n",
-    "* The dataset is very clean and did not need any significant processing\n",
-    "* We have a benchmark built right into the dataset, which is very good for model evaluation purposes\n"
+    "* Dataset contains information on:\n",
+    "    * clients themselves\n",
+    "    * their use of services\n",
+    "    * different types of charges associated with said service use\n",
+    "    * satisfaction level\n",
+    "    * churn and reason for churn. This is a very wide range of variables, covering a lot of topics that can enhance our EDA\n",
+    "* The dataset is very clean and did not need any significant processing.\n",
+    "* The dataset contains a benchmark in the form of churn probability inferred by a model built in IBM SPSS Modeler. This is very useful to comprate model effectiveness.\n"
    ]
   }
  ],
